<resources>
    <string name="app_name">TinderApp</string>

    <string name="logout">Log out</string>

    <!-- Login & Register-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register_link">New to TinderApp? Register here.</string>
    <string name="login_error">Unable to log in. %1$s</string>
    <string name="check_internet">Please check your Internet connection.</string>
    <string name="check_credentials">Please check your username and password.</string>
    <string name="register">Register</string>
    <string name="email_invalid">Invalid email.</string>
    <string name="password_invalid">Password must be longer than or equal to 6 characters.</string>
    <string name="register_error">Unable to register with provided credentials.</string>

    <!-- Feed -->
    <string name="no_more_data">No more data.</string>
    <string name="error_loading_feed">Error while loading feeds.</string>

    <!-- Chat -->
    <string name="error_loading_user">Unable to load user.</string>
    <string name="menu_chat">Chat</string>
    <string name="message_hint">Type a message</string>
    <string name="send_chat_message">Send</string>

    <!--Notification-->
    <string name="default_notification_channel_id">tinder_app_default</string>
    <string name="channel_name">TinderApp</string>
    <string name="channel_description">Incoming messages</string>

</resources>
